--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.28.4",
+    "aos": "^2.3.4",
     "axios": "^1.6.8",
     "daisyui": "^4.7.3",
     "firebase": "^10.9.0",
