--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
